--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 .body {
+    box-sizing: border-box;
     width: 600px;
     margin: auto;
     text-align: center;
@@ -10,23 +11,39 @@
     font-family: 'Varela Round', sans-serif;
 }
 
-.btn {
+.body__score {
     position: absolute;
-    top: 280px;
-    left: 240px;
-    padding: 20px 25px;
+    display: none;
+    width: 200px;
+    height: 110px;
+    background-color: rgb(238, 238, 238);
+    top: 200px;
+    left: 200px;
+    border: 1px solid #333;
+    font-size: 20px;
+    border-radius: 5px;
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.1);
+}
+
+.score__heading {
+    margin: 15px 0;
+}
+
+.btn {
+    padding: 10px 15px;
+    margin-bottom: 10px;
     cursor: pointer;
     border: 1px solid #333;
     border-radius: 5px;
-    background-color: #efefef;
-    font-size: 20px;
+    background-color: rgba(131, 131, 131, 0.4);
+    font-size: 18px;
     color: #333333;
-    min-width: 120px;
+    min-width: 100px;
 }
 
 .btn:hover {
-    top: 278px;
     background-color: #d3d3d3;
+    box-shadow: 0 4px 4px rgba(131, 131, 131, 0.6);
 }
 
 #myCanvas {
